WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150400
Failures in PutStackSinkingPhase should be less severe
https://bugs.webkit.org/show_bug.cgi?id=150400
Summary
Failures in PutStackSinkingPhase should be less severe
Filip Pizlo
Reported
2015-10-21 11:29:30 PDT
Patch forthcoming.
Attachments
the patch
(6.35 KB, patch)
2015-10-21 11:32 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-10-21 11:32:39 PDT
Created
attachment 263707
[details]
the patch
Geoffrey Garen
Comment 2
2015-10-21 11:36:40 PDT
Comment on
attachment 263707
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263707&action=review
r=me
> Source/JavaScriptCore/dfg/DFGPutStackSinkingPhase.cpp:254 > + // enabled we silently let this fly and we just abort this phase.
enabled => disabled
> Source/JavaScriptCore/dfg/DFGPutStackSinkingPhase.cpp:265 > + // Oh noes! Abort!!
O HAI IZ LOL CODE?
https://esolangs.org/wiki/LOLCODE
Filip Pizlo
Comment 3
2015-10-21 11:37:48 PDT
(In reply to
comment #2
)
> Comment on
attachment 263707
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=263707&action=review
> > r=me > > > Source/JavaScriptCore/dfg/DFGPutStackSinkingPhase.cpp:254 > > + // enabled we silently let this fly and we just abort this phase. > > enabled => disabled
Fixed.
> > > Source/JavaScriptCore/dfg/DFGPutStackSinkingPhase.cpp:265 > > + // Oh noes! Abort!! > > O HAI IZ LOL CODE?
https://esolangs.org/wiki/LOLCODE
Should I fix it? ;-)
Filip Pizlo
Comment 4
2015-10-21 11:46:52 PDT
Landed in
http://trac.webkit.org/changeset/191395
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug