Failures in PutStackSinkingPhase should be less severe https://bugs.webkit.org/show_bug.cgi?id=150400

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

Make the PutStackSinkingPhase abort instead of asserting. To test that it's OK to not have
PutStackSinkingPhase run, this adds a test mode where we run without PutStackSinkingPhase.

* dfg/DFGPlan.cpp: Make it possible to not run PutStackSinkingPhase for tests.
(JSC::DFG::Plan::compileInThreadImpl):
* dfg/DFGPutStackSinkingPhase.cpp: PutStackSinkingPhase should abort instead of asserting, except when validation is enabled.
* runtime/Options.h: Add an option for disabling PutStackSinkingPhase.

Tools:

Add a test mode for no PutStackSinkingPhase.

* Scripts/run-jsc-stress-tests:



Canonical link: https://commits.webkit.org/168560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191395 268f45cc-cd09-0410-ab3c-d52691b4dbfc